Closed Bug 1481514 Opened 7 years ago Closed 7 years ago

When clicking on slotted text, the event target is wrongly chosen.

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(2 files)

Attached file Testcase
No description provided.
PresShell does this already. I updated the scroll / drag code as well, but I need to admit I didn't figure out how to write a test for it. The rest of the codepaths are needed for the added test to pass.
Attachment #8998274 - Flags: review?(bugs)
Comment on attachment 8998274 [details] Teach some places in ESM to walk the flattened tree. Olli Pettay [:smaug] has approved the revision. https://phabricator.services.mozilla.com/D2871
Attachment #8998274 - Flags: review+
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/mozilla-inbound/rev/024fdde141c4 Teach some places in ESM to walk the flattened tree. r=smaug
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: