Bug 1481514: Teach some places in ESM to walk the flattened tree. r=smaug

PresShell does this already.

I updated the scroll / drag code as well, but I need to admit I didn't figure
out how to write a test for it. The rest of the codepaths are needed for the
added test to pass.

Differential Revision: https://phabricator.services.mozilla.com/D2871